--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-slick": "^0.30.3",
     "recharts": "^2.15.1",
+    "slick-carousel": "^1.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
