--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "graphql": "^16.11.0",
     "html-react-parser": "^5.2.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
@@ -50,6 +51,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-facebook-customer-chat": "^0.0.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-slick": "^0.30.3",
