--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "react-icons": "^5.5.0",
+    "react-calendar": "^5.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
