--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-facebook-customer-chat": "^0.0.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.1",
@@ -61,9 +63,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
-    "react-icons": "^5.5.0",
-    "react-calendar": "^5.1.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
