--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@sendgrid/mail": "^8.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -48,6 +49,7 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
